added a CSS file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
 	<head>
 		<title>Web Rover FTW!</title>
-		<style>
-			body{
-				font:sans-serif;
-			}
-		</style>
+        <link rel="stylesheet" type="text/css" href="assets/style.css">
 	</head>
 	<body>
 		<h1>Web Rover</h1>
