added video to the page

--- a/lejos-server/web-app/index.html
+++ b/lejos-server/web-app/index.html
@@ -188,5 +188,7 @@ function getCommandForPoint(touchX, touchY)
     <div id="log" style="margin-top:350px;">
 
     </div>
+    <!-- TODO: Remove the hard coded IP Address -->
+    <img src="http://172.17.5.198:8080/video"/>
 	</body>
 </html>
