Route video frames through web-app -- which leaves open possibility of delaying these as well.

--- a/lejos-server/web-app/index.html
+++ b/lejos-server/web-app/index.html
@@ -201,6 +201,6 @@ $.getJSON('api/sense', function(data) {
     <div id="sensor"></div>
 
     <!-- TODO: Remove the hard coded IP Address -->
-    <img id="video" src="http://172.17.5.198:8080/shot.jpg"/>
+    <img id="video" src="video.jpg"/>
 	</body>
 </html>
