--- a/lejos-server/web-app/index.html
+++ b/lejos-server/web-app/index.html
@@ -134,15 +134,18 @@ function handleEnd(evt)
 		ctx.lineTo(touches[i].pageX, touches[i].pageY);
 		ongoingTouches.splice(i, 1);  // remove it; we're done
 	}
+
+  el.style.backgroundImage = "url('d-pad.gif')";
 }
 function handleCancel(evt)
 {
 	evt.preventDefault();
 	var touches = evt.changedTouches;
-	 
+	
 	for (var i=0; i<touches.length; i++) {
 		ongoingTouches.splice(i, 1);  // remove it; we're done
 	}
+  el.style.backgroundImage = "url('d-pad.gif')";
 }
 function colorForTouch(touch)
 {
@@ -206,17 +209,22 @@ function getCommandForPoint(touchX, touchY, force)
 	// set duration
 	if(direction == 'left'){
 		duration = directionX;
+    canvas.style.backgroundImage = "url('images/d-pad-left.gif')";
 	}
 	if (direction == 'forward') {
 		duration = directionY;
+    canvas.style.backgroundImage = "url('images/d-pad-fwd.gif')";
 	}
 	if (direction =='right') {
 		duration = -directionX;
+    canvas.style.backgroundImage = "url('images/d-pad-right.gif')";
 	}
 	if (direction == 'backward') {
 		duration = -directionY;
+    canvas.style.backgroundImage = "url('images/d-pad-back.gif')";
 	}
 
+  document.getElementById('log').innerHTML = "jsonResponse";
 	// create JSON response
 	if (duration != NaN) {
 		var jsonResponse = {};
@@ -227,6 +235,8 @@ function getCommandForPoint(touchX, touchY, force)
 		force = (force/100) * 50;
 		jsonResponse['velocity'] = force-1;
 		
+
+
 		// post JSON to WebRover API
 		$.post("api", jsonResponse, function(data){
 			console.log(data.result);
