--- a/lejos-server/web-app/index.html
+++ b/lejos-server/web-app/index.html
@@ -40,7 +40,10 @@
 
 			setInterval(function(){refreshImg()}, 500);
 			setInterval(function(){checkSensor()}, 1000);
-
+			$('#delay').change(function() {
+				// post JSON to WebRover API
+				$.getJSON('api/delay/' + $('#delay').val());
+			});
 		}
 		
 		var controlInterval;
@@ -252,14 +255,13 @@ $.getJSON('api/sense', function(data) {
     	<form>
         	<p>
             	<label>Time delay</label>
-                <select>
+                <select id="delay">
                 	<option value="0">None</option>
-                    <option value="0.5">0.5 sec</option>
-                    <option value="1">1 sec</option>
-                    <option value="1.3">Earth>Moon: 1.3 sec</option>
-                    <option value="360">Earth>Mars: 3 min</option>
+                    <option value="500">0.5 sec</option>
+                    <option value="1000">1 sec</option>
+                    <option value="1300">Earth>Moon: 1.3 sec</option>
+                    <option value="36000">Earth>Mars: 3 min</option>
                 </select>
-                <input name="Set" type="submit" value="Set">
             </p>
         </form>
     </div>
