Add extra style rules for rule builder UI

--- a/lejos-server/web-app/index.html
+++ b/lejos-server/web-app/index.html
@@ -2,20 +2,10 @@
 	<head>
 		<title>WebRover1 FTW!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link type="text/css" href="style.css" rel="Stylesheet"/>
 		<style>
 			body {
-				margin:0;
-				padding: 0 10px 10px;
-				
-				font-family: sans-serif;
 				text-align: center;
-			}
-			h1 {
-				color: white;
-				background: black;
-				padding: 0.5em;
-				text-align: center;
-				margin: 0 -10px 5px;
 			}
 			canvas{
 				background-color: lightgrey;
