Tweaks to rulebuilder

--- a/rulebuilder/index.html
+++ b/rulebuilder/index.html
@@ -162,7 +162,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 </head>
 
 <body>
-		<h1>WebRover1</h1>
+		<h1>Web-rover-1</h1>
 <div class="main">
 <div class="opts">
   <h2>Events</h2>
