Add meta viewport to HTML pages

--- a/lejos-server/web-app/index.html
+++ b/lejos-server/web-app/index.html
@@ -1,7 +1,8 @@
-<html>
-	<head>
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>WebRover1 FTW!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link type="text/css" href="style.css" rel="Stylesheet"/>
 		<style>
 			body {
