--- a/rulebuilder/index.html
+++ b/rulebuilder/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<!DOCTYPE html>
+<html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Lego Rover Rule Builder</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
 <link type="text/css" href="ui-lightness/jquery-ui-1.8.23.custom.css" rel="Stylesheet"/>
 <link type="text/css" href="../lejos-server/web-app/style.css" rel="Stylesheet"/>
