--- a/rulebuilder/index.html
+++ b/rulebuilder/index.html
@@ -300,6 +300,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+<script src="jquery.ui.touch-punch.js"></script>
 <!--script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script-->
 
 <script>
